--- a/email_template/email_template.html
+++ b/email_template/email_template.html
@@ -172,10 +172,10 @@
             </tr>
             <tr>
               <td class="force-col-center" valign="middle" style="text-align: left;">
-                <img src="logo.png" alt="" height="61" width="157" border="0">
+                <img src="logo.png" alt="" height="53" width="157" border="0">
               </td>
               <td class="force-col-center" valign="middle" style="padding: 20px 0;text-align: right;font-size: 20px; font-family: sans-serif;color: #000;font-weight: bold;">
-                Potvrzení registrace
+                MOBILE ACADEMY
               </td>
             </tr>
             <tr>
@@ -192,6 +192,7 @@
           <table border="0" width="100%" cellpadding="0" cellspacing="0" align="center">
             <tr>
               <td style="padding: 30px; font-family: sans-serif; font-size: 16px; line-height: 22px; color: #444444;">
+                <div style="font-size: 22px;line-height: 1;" class="hh-center">Potvrzení registrace</div><br>
                 Ulla nec est tristique, tempor lacus eu, aliquam erat. Cras tristique, arcu ac tristique hendrerit, urna diam mollis libero, vitae gravida nisi lectus in leo. Aenean eu ligula id nisi euismod dapibus et eu mauris. Donec quis dictum velit. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. 
                 <br><br>
                 <table cellspacing="0" cellpadding="0" border="0" class="button" style="margin: 0 auto;">
