--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <li><a href="#harmonogram">Harmonogram</a></li>
             <li><a href="#contact">Kontakt</a></li>
           </ul>
-          <a href="https://goo.gl/forms/FG5lZZSEnFSQ4qjK2" class="btn btn--small">Přihlásit se</a>
+          <a href="https://goo.gl/forms/FG5lZZSEnFSQ4qjK2" target="_blank" class="btn btn--small">Přihlásit se</a>
         </nav>
         
         <div class="menu-toggle">
@@ -58,8 +58,8 @@
     <section id="hero" class="hero">
         <div class="hero__content">
           <h1 class="center"><span>ETNETERA</span> MOBILE ACADEMY</h1> 
-          <span class="hero__date">ÚNOR 2018, PRAHA</span>
-          <a href="https://goo.gl/forms/FG5lZZSEnFSQ4qjK2" class="btn btn-large">Přihlaš se</a>
+          <span class="hero__date">BŘEZEN 2018, PRAHA</span>
+          <a href="https://goo.gl/forms/FG5lZZSEnFSQ4qjK2" target="_blank" class="btn btn-large">Přihlásit se</a>
           <ul class="hero__social">
             <li><a target="_blank" href="https://www.linkedin.com/company/44243/">
               <svg xmlns="http://www.w3.org/2000/svg" width="25px" height="24px" viewBox="0 0 24.56 23.52"><defs><style>.cls-1{fill:#aaa;}</style></defs><title>Datový zdroj 1</title><g id="Vrstva_2" data-name="Vrstva 2"><g id="Vrstva_1-2" data-name="Vrstva 1"><path id="icon_linkedin" data-name="icon linkedin" class="cls-1" d="M24.56,14.43v9.09H19.3V15c0-2.14-.76-3.59-2.67-3.59a2.87,2.87,0,0,0-2.7,1.93,3.53,3.53,0,0,0-.18,1.28v8.86H8.49s.07-14.37,0-15.86h5.27V9.91l0,.05h0V9.91A5.23,5.23,0,0,1,18.5,7.29C22,7.29,24.56,9.55,24.56,14.43ZM3,0a2.75,2.75,0,0,0-.47,5.48H3A2.75,2.75,0,0,0,3.39,0ZM.32,23.52H5.58V7.66H.32Z"/></g></g></svg>
@@ -78,7 +78,9 @@
         <div class="row">
         <div class="col-lg-7">
           <h2>O akademii</h2>
-          <p>Otevíráme první ročník Mobile Academy, ucelený kurz v oblasti mobilního vývoje pořádaný firmou Etnetera a.s. V tomto běhu se zaměříme na iOS platformu a programovací jazyk Swift. Zdokonal svoje dovednosti po boku mentorů při práci na reálných projektech.</p>
+          <p>Otevíráme <strong>první ročník Mobile Academy</strong>, ucelený kurz v oblasti mobilního vývoje pořádaný firmou Etnetera a.s. V tomto běhu se zaměříme na <strong>iOS platformu a programovací jazyk Swift</strong>.</p>
+          <p>Budou tě učit lidé přímo z oboru, kteří se mobilnímu vývoji věnují každý den. Ti ti budou navíc k dispozici každý den jako konzultanti.</p>
+          <p><strong>Zdokonal svoje dovednosti po boku mentorů při práci na reálných projektech.</strong></p>
 
           <ul class="accordion">
             <li class="accordion__item active">
@@ -86,7 +88,7 @@
                 Pro koho je akademie určena? 
               </div>
               <div class="accordion__content" style="display: block;">
-                <p>Akademie je určena pro každého, kdo se chce naučit se nebo zdokonalit své dovednosti v oblasti mobilního vývoje na platformě iOS.</p>
+                <p>Akademie je určena pro každého, kdo se chce naučit nebo zdokonalit své dovednosti v oblasti mobilního vývoje na platformě iOS.</p>
               </div>
             </li>
             <li class="accordion__item">
@@ -94,7 +96,7 @@
                 Jak vybereme účastníky?
               </div>
               <div class="accordion__content">
-                <p>Na základě přijatých přihlášek vybereme zhruba dvě desítky účastníků na osobní setkání v lednu 2018. Z nich vybereme budoucí studenty, kteří absolvují osmi týdenní kurz.</p>
+                <p>Na základě přijatých přihlášek vybereme zhruba dvě desítky účastníků na osobní setkání v únoru 2018. Z nich vybereme budoucí studenty, kteří absolvují osmi týdenní kurz.</p>
               </div>
             </li>
             <li class="accordion__item">
@@ -102,7 +104,8 @@
                 Jak akademie proběhne?
               </div>
               <div class="accordion__content">
-                <p>Studium proběhne v osmi za sebou jdoucích sobot a to formou celodenních workshopů složených z teorie a praktických cvičení. Po každém workshopu vám bude zadán domácí úkol. Pro úspěšné ukončení kurzu je důležité mít odchozeno alespoň 80 procent z 2 měsíčního kurzu. Budou tě učit lidé přímo z oboru, kteří se mobilnímu vývoji věnují denně. K dispozici ti budou každý den konzultanti. Celá akademie bude zakončena závěrečným projektem a party :)</p>
+                <p>Studium bude probíhat osm týdnů, v každém bude vždy jeden celodenní workshop složený z teorie a praktických cvičení a následně ti bude zadán domácí úkol.</p>
+                <p>Pro úspěšné ukončení kurzu je důležité navštívit alespoň 6 workshopů a splnit všechny domácí úkoly.</p>
               </div>
             </li>
             <li class="accordion__item">
@@ -110,7 +113,7 @@
                 Co potřebuješ?
               </div>
               <div class="accordion__content">
-                <p>Nemáš Maca nebo iPhone? Nevadí! U pohovoru se domluvíme.</p>
+                <p>V podstatě nic, nemáš-li Maca nebo iPhone… nevadí! U pohovoru se domluvíme.</p>
               </div>
             </li>
           </ul>
@@ -243,9 +246,12 @@
               <div class="speakers__wrapper col-md-15 col-lg-10">
                 <div class="speakers__content">
                   <h3>
-                  <span class="speakers__position">iOS Developer & UX architekt</span>
+                  <span class="speakers__position">iOS Developer &amp; UX architekt</span>
                   Petr Urban
                 </h3>
+                <p>Petr naskočil do zákulisí světa mobilních aplikací v roce 2012. Dlouho se věnoval převážně platformě Android, psal backendy v PHP a navrhoval uživatelská rozhraní na míru. Spolu s hromadou zkušeností <strong>nasbíral statisíce stažení</strong> na několika vlastních aplikacích.</p>
+                <p>V roce 2016 se chopil příležitosti táhnout s námi za jeden provaz. Postupně se zakoukal do <strong>atraktivního jazyka Swift</strong> a přešel na platformu iOS.</p>
+                <p>Dnes mnoho času věnuje také UX, díky čemuž nemůže chybět na žádném novém projektu jakožto <strong>UX designer</strong>.</p>
                 <ul class="speakers__social">
                   <li><a targer="_blank" href="https://www.linkedin.com/in/petr-urban-2abba175/"><svg xmlns="http://www.w3.org/2000/svg" width="21px" height="20px" viewBox="0 0 24.56 23.52"><defs><style>.cls-1{fill:#aaa;}</style></defs><title>Datový zdroj 1</title><g id="Vrstva_2" data-name="Vrstva 2"><g id="Vrstva_1-2" data-name="Vrstva 1"><path id="icon_linkedin" data-name="icon linkedin" class="cls-1" d="M24.56,14.43v9.09H19.3V15c0-2.14-.76-3.59-2.67-3.59a2.87,2.87,0,0,0-2.7,1.93,3.53,3.53,0,0,0-.18,1.28v8.86H8.49s.07-14.37,0-15.86h5.27V9.91l0,.05h0V9.91A5.23,5.23,0,0,1,18.5,7.29C22,7.29,24.56,9.55,24.56,14.43ZM3,0a2.75,2.75,0,0,0-.47,5.48H3A2.75,2.75,0,0,0,3.39,0ZM.32,23.52H5.58V7.66H.32Z"/></g></g></svg></a></li>
                 </ul>
@@ -261,7 +267,7 @@
               <div class="speakers__wrapper col-md-15 col-lg-10">
                 <div class="speakers__content">
                   <h3>
-                  <span class="speakers__position">iOS Developer & Team Leader</span>
+                  <span class="speakers__position">iOS Developer &amp; Team Leader</span>
                   Jiří Zoudun
                 </h3>
                 <ul class="speakers__social">
@@ -284,7 +290,7 @@
                   <span class="speakers__position">Mobile Division Leader</span>
                   Miloš felix
                 </h3>
-                <p>Po střední škole jsem začínal jako designér a animátor ve Flashi. Za vydělané peníze jsem si pořídil Macintosh a později první iPhone z USA. Nadchlo mě programování pro iOS a začal jsem se mu intenzivně věnovat. Vyzkoušel jsem si také kreativní práci v digitální agentuře a vedení lidí. Před 3 lety hledala Etnetera technologického tahouna mobilního vývoje a mě oslovila firemní kultura. V roce 2015 jsem se stal spoluzakladatelem mobilní divize, kterou dnes vedu.</p>
+                <p>Mio po třední škole začínal jako designér a animátor ve Flashi. Za vydělané peníze si pořídil Macintosh a později <strong>první iPhone z USA</strong>. Programování pro iOS ho tak nadchlo, že se mu začal intenzivně věnovat. Nezůstal ale jen u toho a vyzkoušel si také kreativní práci v digitální agentuře a vedení lidí.</p><p>Před třemi lety jsme hledali technologického tahouna mobilního vývoje a jelikož ho oslovila naše firemní kultura, tak se stal <strong>spoluzakladatelem mobilní divize</strong>, kterou dnes vede.</p>
                 <ul class="speakers__social">
                   <li><a targer="_blank" href="https://www.linkedin.com/in/milosjascur/"><svg xmlns="http://www.w3.org/2000/svg" width="21px" height="20px" viewBox="0 0 24.56 23.52"><defs><style>.cls-1{fill:#aaa;}</style></defs><title>Datový zdroj 1</title><g id="Vrstva_2" data-name="Vrstva 2"><g id="Vrstva_1-2" data-name="Vrstva 1"><path id="icon_linkedin" data-name="icon linkedin" class="cls-1" d="M24.56,14.43v9.09H19.3V15c0-2.14-.76-3.59-2.67-3.59a2.87,2.87,0,0,0-2.7,1.93,3.53,3.53,0,0,0-.18,1.28v8.86H8.49s.07-14.37,0-15.86h5.27V9.91l0,.05h0V9.91A5.23,5.23,0,0,1,18.5,7.29C22,7.29,24.56,9.55,24.56,14.43ZM3,0a2.75,2.75,0,0,0-.47,5.48H3A2.75,2.75,0,0,0,3.39,0ZM.32,23.52H5.58V7.66H.32Z"/></g></g></svg></a></li>
                 </ul>
@@ -311,28 +317,28 @@
           <div class="col-xl-13 col-xl-offset-1">
             <ul class="harmonogram__list">
           <li class="active">
-              <span class="harmonogram__title">Registrace</span>
-              <span class="harmonogram__number"><strong>11</strong>/2017</span>
+              <span class="harmonogram__title">REGISTRACE</span>
+              <span class="harmonogram__number">od <strong>4. 12.</strong> 2017</span>
           </li>
           <li>
               <span class="harmonogram__title">UKONČENÍ REGISTRACE</span>
-              <span class="harmonogram__number"><strong>12</strong>/2017</span>
+              <span class="harmonogram__number"><strong>28. 1.</strong> 2018</span>
           </li>
           <li>
               <span class="harmonogram__title">VÝBĚR STUDENTŮ</span>
-              <span class="harmonogram__number"><strong>01</strong>/2018</span>
+              <span class="harmonogram__number"><strong>2</strong>/2018</span>
           </li>
           <li>
               <span class="harmonogram__title">ZAHAJOVACÍ PÁRTY</span>
-              <span class="harmonogram__number"><strong>02</strong>/2018</span>
+              <span class="harmonogram__number"><strong>2. 3.</strong> 2018</span>
           </li>
           <li>
-              <span class="harmonogram__title">AKADEMIE JEDE</span>
-              <span class="harmonogram__number"><strong>02-03</strong>/2018</span>
+              <span class="harmonogram__title">PRŮBĚH AKADEMIE</span>
+              <span class="harmonogram__number"><strong>3-4.</strong> 2018</span>
           </li>
           <li>
               <span class="harmonogram__title">PROMOCE</span>
-              <span class="harmonogram__number"><strong>04</strong>/2018</span>
+              <span class="harmonogram__number"><strong>4</strong>/2018</span>
           </li>
         </ul>
           </div>
@@ -358,7 +364,7 @@
           </li>
           <li>
             <span class="contact__icon"><img src="dist/img/icon-mail.svg" alt=""></span>
-            <a href="#TODO">info@etnetera.cz</a>
+            <a href="mailto:info@mobileacademy.cz">info@mobileacademy.cz</a>
           </li>
         </ul>
         <a href="https://goo.gl/maps/wxBVUF84iWR2" rel="noopener" target="_blank" class="btn">Podívejte se na mapu</a>
@@ -367,7 +373,7 @@
       </div>
     </section>
 
-    <a href="https://goo.gl/forms/FG5lZZSEnFSQ4qjK2" class="footer footer__link">
+    <a href="https://goo.gl/forms/FG5lZZSEnFSQ4qjK2" target="_blank" class="footer footer__link">
         <span class="btn btn-large">Přihlásit se</span>
     </a>
 
