--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
           </li>
           <li>
               <span class="harmonogram__title">PRŮBĚH AKADEMIE</span>
-              <span class="harmonogram__number"><strong>3-4.</strong> 2018</span>
+              <span class="harmonogram__number"><strong>3-4</strong>/2018</span>
           </li>
           <li>
               <span class="harmonogram__title">PROMOCE</span>
