--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="col-lg-7">
           <h2>O akademii</h2>
           <p>Otevíráme <strong>první ročník Mobile Academy</strong>, ucelený kurz v oblasti mobilního vývoje pořádaný firmou Etnetera a.s. V tomto běhu se zaměříme na <strong>iOS platformu a programovací jazyk Swift</strong>.</p>
-          <p>Budou tě učit lidé přímo z oboru, kteří se mobilnímu vývoji věnují každý den. Ti ti budou navíc k dispozici každý den jako konzultanti.</p>
+          <p>Budou tě učit lidé přímo z oboru, kteří se mobilnímu vývoji dlouhodobě věnují. Jsou ti k dispozici každý den jako konzultanti.</p>
           <p><strong>Zdokonal svoje dovednosti po boku mentorů při práci na reálných projektech.</strong></p>
 
           <ul class="accordion">
@@ -96,7 +96,7 @@
                 Jak vybereme účastníky?
               </div>
               <div class="accordion__content">
-                <p>Na základě přijatých přihlášek vybereme zhruba dvě desítky účastníků na osobní setkání v únoru 2018. Z nich vybereme budoucí studenty, kteří absolvují osmi týdenní kurz.</p>
+                <p>Na základě přijatých přihlášek pozveme několik desítek účastníků na osobní setkání v únoru 2018. Z nich vybereme budoucí studenty, kteří absolvují celý kurz.</p>
               </div>
             </li>
             <li class="accordion__item">
@@ -104,8 +104,8 @@
                 Jak akademie proběhne?
               </div>
               <div class="accordion__content">
-                <p>Studium bude probíhat osm týdnů, v každém bude vždy jeden celodenní workshop složený z teorie a praktických cvičení a následně ti bude zadán domácí úkol.</p>
-                <p>Pro úspěšné ukončení kurzu je důležité navštívit alespoň 6 workshopů a splnit všechny domácí úkoly.</p>
+                <p>Studium bude probíhat 8 týdnů. V každém bude vždy jeden celodenní workshop složený z teorie a praktických cvičení.  Z workshopu si kromě poznámek odneseš i domácí úkol.</p>
+                <p>Pro úspěšné ukončení kurzu je nutné navštívit alespoň 6 workshopů a splnit všechny domácí úkoly.</p>
               </div>
             </li>
             <li class="accordion__item">
@@ -113,7 +113,7 @@
                 Co potřebuješ?
               </div>
               <div class="accordion__content">
-                <p>V podstatě nic, nemáš-li Maca nebo iPhone… nevadí! U pohovoru se domluvíme.</p>
+                <p>Odhodlání. Nemáš-li Maca nebo iPhone, nevadí! U pohovoru se domluvíme.</p>
               </div>
             </li>
           </ul>
@@ -227,7 +227,7 @@
                   <span class="speakers__position">Lead iOS Developer</span>
                   Jan Čislinský
                 </h3>
-                <p><strong>„Číslo”</strong> – jak je Honza nejčastěji oslovován u nás v Etneteře – se začal o iOS zajímat v roce 2013, kdy si koupil první iPhone. Jakožto perfekcionista byl operačním systémem iOS ohromen, proto se také rozhodl, že se začne zabývat vývojem pro tuto platformu.</p>
+                <p><strong>„Číslo”</strong> – jak Honzovi nejčastěji říkáme u nás v Etneteře – se začal o iOS zajímat v roce 2013, kdy si koupil první iPhone. Jakožto perfekcionista byl operačním systémem iOS ohromen, proto se také rozhodl, že se začne zabývat vývojem pro tuto platformu.</p>
 <p>Součástí Etnetera rodiny se stal v roce 2015. Byl u vzniku mobilních aplikací <strong>Prima PLAY, O2 Extra Výhody, Viaplay a FORTUNA</strong>. Dále je autorem vlastní aplikace <strong>Zvednout to?</strong></p>
 <p><strong>V současné chvíli</strong> působí na pozici <strong>Lead iOS Developer</strong>.</p>
                 <ul class="speakers__social">
@@ -290,7 +290,7 @@
                   <span class="speakers__position">Mobile Division Leader</span>
                   Miloš felix
                 </h3>
-                <p>Mio po třední škole začínal jako designér a animátor ve Flashi. Za vydělané peníze si pořídil Macintosh a později <strong>první iPhone z USA</strong>. Programování pro iOS ho tak nadchlo, že se mu začal intenzivně věnovat. Nezůstal ale jen u toho a vyzkoušel si také kreativní práci v digitální agentuře a vedení lidí.</p><p>Před třemi lety jsme hledali technologického tahouna mobilního vývoje a jelikož ho oslovila naše firemní kultura, tak se stal <strong>spoluzakladatelem mobilní divize</strong>, kterou dnes vede.</p>
+                <p>Mio po střední škole začínal jako designér a animátor ve Flashi. Za vydělané peníze si pořídil Macintosh a později <strong>první iPhone z USA</strong>. Programování pro iOS ho tak nadchlo, že se mu začal intenzivně věnovat. Nezůstal ale jen u toho a vyzkoušel si také kreativní práci v digitální agentuře a vedení lidí.</p><p>Před třemi lety jsme hledali technologického tahouna mobilního vývoje. Jelikož ho oslovila naše firemní kultura, tak se stal <strong>spoluzakladatelem mobilní divize</strong>, kterou dnes vede.</p>
                 <ul class="speakers__social">
                   <li><a targer="_blank" href="https://www.linkedin.com/in/milosjascur/"><svg xmlns="http://www.w3.org/2000/svg" width="21px" height="20px" viewBox="0 0 24.56 23.52"><defs><style>.cls-1{fill:#aaa;}</style></defs><title>Datový zdroj 1</title><g id="Vrstva_2" data-name="Vrstva 2"><g id="Vrstva_1-2" data-name="Vrstva 1"><path id="icon_linkedin" data-name="icon linkedin" class="cls-1" d="M24.56,14.43v9.09H19.3V15c0-2.14-.76-3.59-2.67-3.59a2.87,2.87,0,0,0-2.7,1.93,3.53,3.53,0,0,0-.18,1.28v8.86H8.49s.07-14.37,0-15.86h5.27V9.91l0,.05h0V9.91A5.23,5.23,0,0,1,18.5,7.29C22,7.29,24.56,9.55,24.56,14.43ZM3,0a2.75,2.75,0,0,0-.47,5.48H3A2.75,2.75,0,0,0,3.39,0ZM.32,23.52H5.58V7.66H.32Z"/></g></g></svg></a></li>
                 </ul>
