✨ Jirka intro (master)

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                   Jan Čislinský
                 </h3>
                 <p><strong>„Číslo”</strong> – jak Honzovi nejčastěji říkáme u nás v Etneteře – se začal o iOS zajímat v roce 2013, kdy si koupil první iPhone. Jakožto perfekcionista byl operačním systémem iOS ohromen, proto se také rozhodl, že se začne zabývat vývojem pro tuto platformu.</p>
-<p>Součástí Etnetera rodiny se stal v roce 2015. Byl u vzniku mobilních aplikací <strong>Prima PLAY, O2 Extra Výhody, Viaplay a FORTUNA</strong>. Dále je autorem vlastní aplikace <strong>Zvednout to?</strong></p>
+<p>Součástí Etnetera rodiny se stal v roce 2015. Byl u vzniku mobilních aplikací <strong>Prima PLAY, O2 Extra Výhody, Viaplay a FORTUNA</strong>. Dále je autorem vlastní aplikace <a href="https://www.etnetera.cz/blog/opravdu-to-zvedat" style="color: #ff5858"><strong>Zvednout to?</strong></a></p>
 <p><strong>V současné chvíli</strong> působí na pozici <strong>Lead iOS Developer</strong>.</p>
                 <ul class="speakers__social">
                   <li><a targer="_blank" href="https://www.linkedin.com/in/jcislinsky/"><svg xmlns="http://www.w3.org/2000/svg" width="21px" height="20px" viewBox="0 0 24.56 23.52"><defs><style>.cls-1{fill:#aaa;}</style></defs><title>Datový zdroj 1</title><g id="Vrstva_2" data-name="Vrstva 2"><g id="Vrstva_1-2" data-name="Vrstva 1"><path id="icon_linkedin" data-name="icon linkedin" class="cls-1" d="M24.56,14.43v9.09H19.3V15c0-2.14-.76-3.59-2.67-3.59a2.87,2.87,0,0,0-2.7,1.93,3.53,3.53,0,0,0-.18,1.28v8.86H8.49s.07-14.37,0-15.86h5.27V9.91l0,.05h0V9.91A5.23,5.23,0,0,1,18.5,7.29C22,7.29,24.56,9.55,24.56,14.43ZM3,0a2.75,2.75,0,0,0-.47,5.48H3A2.75,2.75,0,0,0,3.39,0ZM.32,23.52H5.58V7.66H.32Z"/></g></g></svg></a></li>
@@ -270,6 +270,15 @@
                   <span class="speakers__position">iOS Developer &amp; Team Leader</span>
                   Jiří Zoudun
                 </h3>
+                <p>
+                  Jirka se vývojem mobilních aplikací začal zabývat již při studiu na vysoké škole, kde vytvořil svou <strong>první appku v rámci bakalářské práce</strong>. Touto aplikací vzbudil pozornost našeho HR oddělení a protože jsme si padli do oka, tak k nám zanedlouho nastoupil.
+                </p>
+                <p>
+                  Postupem času se začal zabývat <strong>AR/VR a multiplatformním mobilním vývojem</strong>. Jeho velkým koníčkem je navíc IoT.
+                </p>
+                <p>
+                  V roce 2017 si uvědomil, že ho táhnout i softovější činnosti. Proto se přihlásil do <a href="https://www.etnetera.cz/blog/prima-volba-bez-lzi-a-populismu-existuje" style="color: #ff5858"><strong>voleb na pozici team leadera</strong></a>, které následně vyhrál.
+                </p>
                 <ul class="speakers__social">
                   <li><a targer="_blank" href="https://www.instagram.com/_zoudy/"><svg xmlns="http://www.w3.org/2000/svg" width="20px" height="21px" viewBox="0 0 23.07 23.13"><defs><style>.cls-1{fill:#aaa;}</style></defs><title>Datový zdroj 1</title><g id="Vrstva_2" data-name="Vrstva 2"><g id="Vrstva_1-2" data-name="Vrstva 1"><path id="icon_instagram" data-name="icon instagram" class="cls-1" d="M11.55,7.73a3.85,3.85,0,1,1-3.84,3.86h0a3.85,3.85,0,0,1,3.84-3.85m0-1.93a5.78,5.78,0,1,0,5.77,5.8h0A5.77,5.77,0,0,0,11.55,5.8Zm6.15-1.93a1.54,1.54,0,1,1-1.54,1.55h0A1.54,1.54,0,0,1,17.7,3.87h0ZM16.54,1.93a4.63,4.63,0,0,1,4.61,4.63v10a4.62,4.62,0,0,1-4.61,4.63h-10a4.62,4.62,0,0,1-4.61-4.63v-10A4.63,4.63,0,0,1,6.54,1.93h10m0-1.93h-10A6.56,6.56,0,0,0,0,6.55v10a6.56,6.56,0,0,0,6.54,6.55h10a6.56,6.56,0,0,0,6.54-6.55v-10A6.56,6.56,0,0,0,16.54,0Z"/></g></g></svg></a></li>
                   <li><a targer="_blank" href="https://www.linkedin.com/in/jirizoudun/"><svg xmlns="http://www.w3.org/2000/svg" width="21px" height="20px" viewBox="0 0 24.56 23.52"><defs><style>.cls-1{fill:#aaa;}</style></defs><title>Datový zdroj 1</title><g id="Vrstva_2" data-name="Vrstva 2"><g id="Vrstva_1-2" data-name="Vrstva 1"><path id="icon_linkedin" data-name="icon linkedin" class="cls-1" d="M24.56,14.43v9.09H19.3V15c0-2.14-.76-3.59-2.67-3.59a2.87,2.87,0,0,0-2.7,1.93,3.53,3.53,0,0,0-.18,1.28v8.86H8.49s.07-14.37,0-15.86h5.27V9.91l0,.05h0V9.91A5.23,5.23,0,0,1,18.5,7.29C22,7.29,24.56,9.55,24.56,14.43ZM3,0a2.75,2.75,0,0,0-.47,5.48H3A2.75,2.75,0,0,0,3.39,0ZM.32,23.52H5.58V7.66H.32Z"/></g></g></svg></a></li>
