Updates Mio and scheudle (master)

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                   Jan Čislinský
                 </h3>
                 <p><strong>„Číslo”</strong> – jak Honzovi nejčastěji říkáme u nás v Etneteře – se začal o iOS zajímat v roce 2013, kdy si koupil první iPhone. Jakožto perfekcionista byl operačním systémem iOS ohromen, proto se také rozhodl, že se začne zabývat vývojem pro tuto platformu.</p>
-<p>Součástí Etnetera rodiny se stal v roce 2015. Byl u vzniku mobilních aplikací <strong>Prima PLAY, O2 Extra Výhody, Viaplay a FORTUNA</strong>. Dále je autorem vlastní aplikace <a href="https://www.etnetera.cz/blog/opravdu-to-zvedat" style="color: #ff5858"><strong>Zvednout to?</strong></a></p>
+<p>Součástí Etnetera rodiny se stal v roce 2015. Byl u vzniku mobilních aplikací <strong>Prima PLAY, O2 Extra Výhody, Viaplay a FORTUNA</strong>. Dále je autorem vlastní aplikace <strong>Zvednout to?</strong></p>
 <p><strong>V současné chvíli</strong> působí na pozici <strong>Lead iOS Developer</strong>.</p>
                 <ul class="speakers__social">
                   <li><a targer="_blank" href="https://www.linkedin.com/in/jcislinsky/"><svg xmlns="http://www.w3.org/2000/svg" width="21px" height="20px" viewBox="0 0 24.56 23.52"><defs><style>.cls-1{fill:#aaa;}</style></defs><title>Datový zdroj 1</title><g id="Vrstva_2" data-name="Vrstva 2"><g id="Vrstva_1-2" data-name="Vrstva 1"><path id="icon_linkedin" data-name="icon linkedin" class="cls-1" d="M24.56,14.43v9.09H19.3V15c0-2.14-.76-3.59-2.67-3.59a2.87,2.87,0,0,0-2.7,1.93,3.53,3.53,0,0,0-.18,1.28v8.86H8.49s.07-14.37,0-15.86h5.27V9.91l0,.05h0V9.91A5.23,5.23,0,0,1,18.5,7.29C22,7.29,24.56,9.55,24.56,14.43ZM3,0a2.75,2.75,0,0,0-.47,5.48H3A2.75,2.75,0,0,0,3.39,0ZM.32,23.52H5.58V7.66H.32Z"/></g></g></svg></a></li>
@@ -299,7 +299,8 @@
                   <span class="speakers__position">Mobile Division Leader</span>
                   Miloš felix
                 </h3>
-                <p>Mio po střední škole začínal jako designér a animátor ve Flashi. Za vydělané peníze si pořídil Macintosh a později <strong>první iPhone z USA</strong>. Programování pro iOS ho tak nadchlo, že se mu začal intenzivně věnovat. Nezůstal ale jen u toho a vyzkoušel si také kreativní práci v digitální agentuře a vedení lidí.</p><p>Před třemi lety jsme hledali technologického tahouna mobilního vývoje. Jelikož ho oslovila naše firemní kultura, tak se stal <strong>spoluzakladatelem mobilní divize</strong>, kterou dnes vede.</p>
+                <p>Miloš po střední škole začínal jako freelance designér a animátor ve Flashi. Za vydělané peníze si pořídil Macintosh a později v roce 2007 první iPhone z USA. Svoji první “Hello World!” aplikaci pro iOS naprogramoval už v roce 2008. Od té doby ale nezůstal pouze u programování. Má za sebou kreativní práci v digitální agentuře a letité zkušenosti s vedením lidí a projektů.</p>
+                <p>V roce 2015 jsme v Etneteře hledali technologického tahouna pro mobilní vývoj. Miloše oslovila naše firemní kultura a stal se <strong>spoluzakladatelem mobilní divize</strong>, kterou dnes vede.</p>
                 <ul class="speakers__social">
                   <li><a targer="_blank" href="https://www.linkedin.com/in/milosjascur/"><svg xmlns="http://www.w3.org/2000/svg" width="21px" height="20px" viewBox="0 0 24.56 23.52"><defs><style>.cls-1{fill:#aaa;}</style></defs><title>Datový zdroj 1</title><g id="Vrstva_2" data-name="Vrstva 2"><g id="Vrstva_1-2" data-name="Vrstva 1"><path id="icon_linkedin" data-name="icon linkedin" class="cls-1" d="M24.56,14.43v9.09H19.3V15c0-2.14-.76-3.59-2.67-3.59a2.87,2.87,0,0,0-2.7,1.93,3.53,3.53,0,0,0-.18,1.28v8.86H8.49s.07-14.37,0-15.86h5.27V9.91l0,.05h0V9.91A5.23,5.23,0,0,1,18.5,7.29C22,7.29,24.56,9.55,24.56,14.43ZM3,0a2.75,2.75,0,0,0-.47,5.48H3A2.75,2.75,0,0,0,3.39,0ZM.32,23.52H5.58V7.66H.32Z"/></g></g></svg></a></li>
                 </ul>
@@ -327,7 +328,7 @@
             <ul class="harmonogram__list">
           <li class="active">
               <span class="harmonogram__title">REGISTRACE</span>
-              <span class="harmonogram__number">od <strong>4. 12.</strong> 2017</span>
+              <span class="harmonogram__number">od <strong>11. 12.</strong> 2017</span>
           </li>
           <li>
               <span class="harmonogram__title">UKONČENÍ REGISTRACE</span>
@@ -335,7 +336,7 @@
           </li>
           <li>
               <span class="harmonogram__title">VÝBĚR STUDENTŮ</span>
-              <span class="harmonogram__number"><strong>2</strong>/2018</span>
+              <span class="harmonogram__number"><strong>ÚNOR</strong> 2018</span>
           </li>
           <li>
               <span class="harmonogram__title">ZAHAJOVACÍ PÁRTY</span>
@@ -343,11 +344,11 @@
           </li>
           <li>
               <span class="harmonogram__title">PRŮBĚH AKADEMIE</span>
-              <span class="harmonogram__number"><strong>3-4</strong>/2018</span>
+              <span class="harmonogram__number"><strong>BŘEZEN-DUBEN</strong> 2018</span>
           </li>
           <li>
               <span class="harmonogram__title">PROMOCE</span>
-              <span class="harmonogram__number"><strong>4</strong>/2018</span>
+              <span class="harmonogram__number"><strong>DUBEN</strong> 2018</span>
           </li>
         </ul>
           </div>
