✨ adds FB measure pixel; ♻️  updates text

--- a/index.html
+++ b/index.html
@@ -18,6 +18,24 @@
     <title>Etnetera Mobile Academy 2018</title>
     
     <link rel="stylesheet" href="dist/css/style.min.css">
+
+    <!-- Facebook Pixel Code -->
+    <script>
+    !function(f,b,e,v,n,t,s)
+    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+    n.queue=[];t=b.createElement(e);t.async=!0;
+    t.src=v;s=b.getElementsByTagName(e)[0];
+    s.parentNode.insertBefore(t,s)}(window, document,'script',
+    'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '1387218667966394');
+    fbq('track', 'PageView');
+    </script>
+    <noscript><img height="1" width="1" style="display:none"
+    src="https://www.facebook.com/tr?id=1387218667966394&ev=PageView&noscript=1"
+    /></noscript>
+    <!-- End Facebook Pixel Code -->
   </head>
   <body>
     <div class="wrapper">
@@ -95,6 +113,7 @@
               </div>
               <div class="accordion__content">
                 <p>Studium bude probíhat 8 týdnů. V každém bude vždy jeden celodenní workshop složený z teorie a praktických cvičení.  Z workshopu si kromě poznámek odneseš i domácí úkol.</p>
+                <p>O tom, jestli půjde o <strong>pracovní den nebo víkend</strong>, rozhodneme před zahájením podle výsledků hlasování účastníků.</p>
                 <p>Pro úspěšné ukončení kurzu je nutné navštívit alespoň 6 workshopů a splnit všechny domácí úkoly.</p>
               </div>
             </li>
