--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
                 Jak akademie proběhne?
               </div>
               <div class="accordion__content">
-                <p>Studium bude probíhat 8 týdnů. V každém bude vždy jeden celodenní workshop složený z teorie a praktických cvičení.  Z workshopu si kromě poznámek odneseš i domácí úkol.</p>
-                <p>O tom, jestli půjde o <strong>pracovní den nebo víkend</strong>, rozhodneme před zahájením podle výsledků hlasování účastníků.</p>
+                <p>Studium bude probíhat 8 týdnů. V každém bude vždy jeden celodenní workshop složený z teorie a praktických cvičení. Z workshopu si kromě poznámek odneseš i domácí úkol.</p>
+                <p>Počítáme s tím, že půjde o soboty. Pokud by většině zájemců vyhovoval jiný den, může dojít ke změně.</p>
                 <p>Pro úspěšné ukončení kurzu je nutné navštívit alespoň 6 workshopů a splnit všechny domácí úkoly.</p>
               </div>
             </li>
