--- a/index.html
+++ b/index.html
@@ -348,8 +348,8 @@
               <span class="harmonogram__number"><strong>ÚNOR</strong> 2018</span>
           </li>
           <li>
-              <span class="harmonogram__title">ZAHAJOVACÍ PÁRTY</span>
-              <span class="harmonogram__number"><strong>2. 3.</strong> 2018</span>
+              <span class="harmonogram__title">START AKADEMIE</span>
+              <span class="harmonogram__number"><strong>10. 3.</strong> 2018</span>
           </li>
           <li>
               <span class="harmonogram__title">PRŮBĚH AKADEMIE</span>
@@ -357,7 +357,7 @@
           </li>
           <li>
               <span class="harmonogram__title">PROMOCE</span>
-              <span class="harmonogram__number"><strong>DUBEN</strong> 2018</span>
+              <span class="harmonogram__number"><strong>KVĚTEN</strong> 2018</span>
           </li>
         </ul>
           </div>
