adds Cookie Consent; updates content

--- a/index.html
+++ b/index.html
@@ -36,6 +36,32 @@
     src="https://www.facebook.com/tr?id=1387218667966394&ev=PageView&noscript=1"
     /></noscript>
     <!-- End Facebook Pixel Code -->
+
+    <!-- Cookie Consent -->
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.0.3/cookieconsent.min.js"></script>
+    <script>
+    window.addEventListener("load", function(){
+    window.cookieconsent.initialise({
+      "palette": {
+        "popup": {
+          "background": "#f2f2f2",
+          "text": "#000000"
+        },
+        "button": {
+          "background": "#ff5858",
+          "text": "#ffffff"
+        }
+      },
+      "content": {
+        "message": "Pro správnou funkci těchto stránek ukládáme cookies. Více o zpracování osobních údajů se dozvíte",
+        "dismiss": "Souhlasím",
+        "link": "zde",
+        "href": "https://www.etnetera.cz/ochrana-osobnich-udaju"
+      }
+    })});
+    </script>
+    <!-- End Cookie Consent -->
   </head>
   <body>
     <div class="wrapper">
@@ -66,7 +92,7 @@
     <section id="hero" class="hero">
         <div class="hero__content">
           <h1 class="center"><span>ETNETERA</span> MOBILE ACADEMY</h1> 
-          <span class="hero__date">BŘEZEN 2018, PRAHA</span>
+          <span class="hero__date">Ročník 2018 je za námi</span>
           <a href="https://goo.gl/forms/FG5lZZSEnFSQ4qjK2" target="_blank" class="btn btn-large registration-click" style="visibility: hidden">Přihlásit se</a>
           <ul class="hero__social">
             <li><a target="_blank" href="https://www.linkedin.com/company/44243/">
@@ -351,7 +377,7 @@
               <span class="harmonogram__title">START AKADEMIE</span>
               <span class="harmonogram__number"><strong>10. 3.</strong> 2018</span>
           </li>
-          <li  class="active">
+          <li>
               <span class="harmonogram__title">PRŮBĚH AKADEMIE</span>
               <span class="harmonogram__number"><strong>BŘEZEN-DUBEN</strong> 2018</span>
           </li>
