Vytvoření stránky - Absolventi 2018

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </script>
     <!-- End Cookie Consent -->
   </head>
-  <body>
+  <body class="home">
     <div class="wrapper">
       <header class="header">
       <div class="container">
