--- a/absolventi-2018.html
+++ b/absolventi-2018.html
@@ -91,7 +91,7 @@
             <span class="students__name">Adam Pečev</span>
             <span class="students__desc">
               Zaměření:<br>
-              <strong>Vývoj mobilních apliací pro iOS v jazyce Swift</strong>
+              <strong>Vývoj mobilních aplikací pro iOS v jazyce Swift</strong>
             </span>
           </div>
 
@@ -100,7 +100,7 @@
             <span class="students__name">Milan Čáp</span>
             <span class="students__desc">
               Zaměření:<br>
-              <strong>Vývoj mobilních apliací pro iOS v jazyce Swift</strong>
+              <strong>Vývoj mobilních aplikací pro iOS v jazyce Swift</strong>
             </span>
           </div>
 
@@ -109,7 +109,7 @@
             <span class="students__name">Šimon Voráč</span>
             <span class="students__desc">
               Zaměření:<br>
-              <strong>Vývoj mobilních apliací pro iOS v jazyce Swift</strong>
+              <strong>Vývoj mobilních aplikací pro iOS v jazyce Swift</strong>
             </span>
           </div>
 
@@ -118,7 +118,7 @@
             <span class="students__name">Jan Kodeš</span>
             <span class="students__desc">
               Zaměření:<br>
-              <strong>Vývoj mobilních apliací pro iOS v jazyce Swift</strong>
+              <strong>Vývoj mobilních aplikací pro iOS v jazyce Swift</strong>
             </span>
           </div>
 
@@ -127,7 +127,7 @@
             <span class="students__name">Michal Kroupa</span>
             <span class="students__desc">
               Zaměření:<br>
-              <strong>Vývoj mobilních apliací pro iOS v jazyce Swift</strong>
+              <strong>Vývoj mobilních aplikací pro iOS v jazyce Swift</strong>
             </span>
           </div>
 
@@ -136,7 +136,7 @@
             <span class="students__name">Marek Tomaštík</span>
             <span class="students__desc">
               Zaměření:<br>
-              <strong>Vývoj mobilních apliací pro iOS v jazyce Swift</strong>
+              <strong>Vývoj mobilních aplikací pro iOS v jazyce Swift</strong>
             </span>
           </div>
 
@@ -145,7 +145,7 @@
             <span class="students__name">Michal Chobola</span>
             <span class="students__desc">
               Zaměření:<br>
-              <strong>Vývoj mobilních apliací pro iOS v jazyce Swift</strong>
+              <strong>Vývoj mobilních aplikací pro iOS v jazyce Swift</strong>
             </span>
           </div>
 
@@ -154,7 +154,7 @@
             <span class="students__name">Lukáš Kořínek</span>
             <span class="students__desc">
               Zaměření:<br>
-              <strong>Vývoj mobilních apliací pro iOS v jazyce Swift</strong>
+              <strong>Vývoj mobilních aplikací pro iOS v jazyce Swift</strong>
             </span>
           </div>
 
@@ -163,7 +163,7 @@
             <span class="students__name">Sebastian Soroori</span>
             <span class="students__desc">
               Zaměření:<br>
-              <strong>Vývoj mobilních apliací pro iOS v jazyce Swift</strong>
+              <strong>Vývoj mobilních aplikací pro iOS v jazyce Swift</strong>
             </span>
           </div>
 
@@ -172,7 +172,7 @@
             <span class="students__name">Dorota Piačeková</span>
             <span class="students__desc">
               Zaměření:<br>
-              <strong>Vývoj mobilních apliací pro iOS v jazyce Swift</strong>
+              <strong>Vývoj mobilních aplikací pro iOS v jazyce Swift</strong>
             </span>
           </div>
 
@@ -181,7 +181,7 @@
             <span class="students__name">Markéta Adamusová Hanušová</span>
             <span class="students__desc">
               Zaměření:<br>
-              <strong>Vývoj mobilních apliací pro iOS v jazyce Swift</strong>
+              <strong>Vývoj mobilních aplikací pro iOS v jazyce Swift</strong>
             </span>
           </div>
 
@@ -190,7 +190,7 @@
             <span class="students__name">Michal Čambor</span>
             <span class="students__desc">
               Zaměření:<br>
-              <strong>Vývoj mobilních apliací pro iOS v jazyce Swift</strong>
+              <strong>Vývoj mobilních aplikací pro iOS v jazyce Swift</strong>
             </span>
           </div>
           <div class="students__item">
@@ -198,7 +198,7 @@
             <span class="students__name">Tuan Tu Do</span>
             <span class="students__desc">
               Zaměření:<br>
-              <strong>Vývoj mobilních apliací pro iOS v jazyce Swift</strong>
+              <strong>Vývoj mobilních aplikací pro iOS v jazyce Swift</strong>
             </span>
           </div>
         </div>
