--- a/absolventi-2018.html
+++ b/absolventi-2018.html
@@ -15,7 +15,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="theme-color" content="#ff5858"/>
-    <title>Etnetera Mobile Academy 2018</title>
+    <title>Absolventi 2018 | Etnetera Mobile Academy</title>
     
     <link rel="stylesheet" href="dist/css/style.min.css">
 
