--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
             <ul class="harmonogram__list">
           <li>
               <span class="harmonogram__title">REGISTRACE</span>
-              <span class="harmonogram__number">od <strong>1. 8.</strong> 2019</span>
+              <span class="harmonogram__number"><strong>ČERVENEC</strong> 2019</span>
           </li>
           <li>
               <span class="harmonogram__title">UKONČENÍ REGISTRACE</span>
