--- a/index.html
+++ b/index.html
@@ -363,6 +363,7 @@
           </div>
         </div>
       </div>
+      <div class="container"><div style="position: relative; padding-bottom: 60%; height: 0; overflow: hidden;"><iframe style="position: absolute; padding-top: 20px; top:0; left: 15%; width: 70%; height: 100%;" src="https://calendar.google.com/calendar/embed?height=300&amp;wkst=2&amp;bgcolor=%23ffffff&amp;ctz=Europe%2FPrague&amp;src=ZXRuZXRlcmEuY3pfbm1qZTE4M2RzaHFkY2FpNnQ3Mzg1b2NjMDRAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23F4511E&amp;showTitle=1&amp;showNav=1&amp;showDate=1&amp;showPrint=0&amp;showTabs=1&amp;showCalendars=1&amp;showTz=0" style="border-width:0" width="400" height="300" frameborder="0" scrolling="no"></iframe></div></div>
     </section>
 
     <section id="contact" class="section contact">
