--- a/index.html
+++ b/index.html
@@ -362,8 +362,12 @@
         </ul>
           </div>
         </div>
+<!--               	<div class="row">
+          	<div class="col col-md-12 col-lg-9" style="text-align: center;">
+      			<a href="https://calendar.google.com/calendar?cid=ZXRuZXRlcmEuY3pfbm1qZTE4M2RzaHFkY2FpNnQ3Mzg1b2NjMDRAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ" rel="noopener" target="_blank" class="btn">Přidat do kalendáře</a>
+      		</div>
+        </div> -->
       </div>
-      <div class="container"><div style="position: relative; padding-bottom: 60%; height: 0; overflow: hidden;"><iframe style="position: absolute; top:20px; left: 0; width: 100%; height: 100%;" src="https://calendar.google.com/calendar/embed?height=300&amp;wkst=2&amp;bgcolor=%23ffffff&amp;ctz=Europe%2FPrague&amp;src=ZXRuZXRlcmEuY3pfbm1qZTE4M2RzaHFkY2FpNnQ3Mzg1b2NjMDRAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ&amp;color=%23F4511E&amp;showTitle=1&amp;showNav=1&amp;showDate=1&amp;showPrint=0&amp;showTabs=1&amp;showCalendars=1&amp;showTz=0" style="border-width:0" width="400" height="300" frameborder="0" scrolling="no"></iframe></div></div>
     </section>
 
     <section id="contact" class="section contact">
@@ -393,9 +397,9 @@
       </div>
     </section>
 
-    <!--<a href="https://goo.gl/forms/FG5lZZSEnFSQ4qjK2" target="_blank" class="footer footer__link registration-click">
+    <a href="https://forms.gle/LuadJjW17VdZ5RJw5" target="_blank" class="footer footer__link registration-click">
         <span class="btn btn-large">Přihlásit se</span>
-    </a>-->
+    </a>
 
     </div>
     <script type="text/javascript" src="dist/js/main.min.js"></script>
