--- a/index.html
+++ b/index.html
@@ -150,6 +150,14 @@
                 <p>Odhodlání. Nemáš-li Maca nebo iPhone, nevadí! U pohovoru se domluvíme.</p>
               </div>
             </li>
+            <li class="accordion__item">
+              <div class="accordion__title">
+                Kolik to stojí?
+              </div>
+              <div class="accordion__content">
+                <p>Pokuď se staneš účastníkem akademie, tak je pro tebe kurz zcela zdarma.</p>
+              </div>
+            </li>
           </ul>
         </div>
       </div>
