--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
           <p><strong>Zdokonal svoje dovednosti po boku mentorů při práci na reálných projektech.</strong></p>
 
           <ul class="accordion">
-            <li class="accordion__item active">
+            <li class="accordion__item active forwho-click">
               <div class="accordion__title">
                 Pro koho je akademie určena? 
               </div>
@@ -126,7 +126,7 @@
               </div>
             </li>
             <li class="accordion__item">
-              <div class="accordion__title">
+              <div class="accordion__title selection-click">
                 Jak vybereme účastníky?
               </div>
               <div class="accordion__content">
@@ -134,7 +134,7 @@
               </div>
             </li>
             <li class="accordion__item">
-              <div class="accordion__title">
+              <div class="accordion__title program-click">
                 Jak akademie proběhne?
               </div>
               <div class="accordion__content">
@@ -143,7 +143,7 @@
               </div>
             </li>
             <li class="accordion__item">
-              <div class="accordion__title">
+              <div class="accordion__title whatyouneed-click">
                 Co potřebuješ?
               </div>
               <div class="accordion__content">
@@ -151,7 +151,7 @@
               </div>
             </li>
             <li class="accordion__item">
-              <div class="accordion__title">
+              <div class="accordion__title howmuch-click">
                 Kolik to stojí?
               </div>
               <div class="accordion__content">
@@ -420,6 +420,41 @@
       gtag('event', 'clicked', {
         'event_category': "registration",
         'event_action': 'clicked'
+      });
+    });
+
+    $("div.howmuch-click").click(function() {
+      gtag('event', 'howmuch-clicked', {
+        'event_category': "interest",
+        'event_action': 'howmuch-clicked'
+      });
+    });
+
+    $("div.whatyouneed-click").click(function() {
+      gtag('event', 'whatyouneed-clicked', {
+        'event_category': "interest",
+        'event_action': 'whatyouneed-clicked'
+      });
+    });
+
+    $("div.program-click").click(function() {
+      gtag('event', 'program-clicked', {
+        'event_category': "interest",
+        'event_action': 'program-clicked'
+      });
+    });
+
+    $("div.selection-click").click(function() {
+      gtag('event', 'selection-clicked', {
+        'event_category': "interest",
+        'event_action': 'selection-clicked'
+      });
+    });
+
+    $("div.forwho-click").click(function() {
+      gtag('event', 'forwho-clicked', {
+        'event_category': "interest",
+        'event_action': 'forwho-clicked'
       });
     });
   </script>
