--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
           <p><strong>Zdokonal svoje dovednosti po boku mentorů při práci na reálných projektech.</strong></p>
 
           <ul class="accordion">
-            <li class="accordion__item active forwho-click">
-              <div class="accordion__title">
+            <li class="accordion__item active">
+              <div class="accordion__title forwho-click">
                 Pro koho je akademie určena? 
               </div>
               <div class="accordion__content" style="display: block;">
