hides registration button + content update

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <li><a href="#harmonogram">Harmonogram</a></li>
             <li><a href="#contact">Kontakt</a></li>
           </ul>
-          <a href="https://forms.gle/LuadJjW17VdZ5RJw5" target="_blank" class="btn btn--small registration-click">Přihlásit se</a>
+          <!-- <a href="https://forms.gle/LuadJjW17VdZ5RJw5" target="_blank" class="btn btn--small registration-click">Přihlásit se</a> -->
         </nav>
         
         <div class="menu-toggle">
@@ -91,9 +91,9 @@
 
     <section id="hero" class="hero">
         <div class="hero__content">
-          <h1 class="center"><span>ETNETERA</span> MOBILE ACADEMY</h1> 
-          <span class="hero__date">Září/říjen 2019</span>
-          <a href="https://forms.gle/LuadJjW17VdZ5RJw5" target="_blank" class="btn btn-large registration-click">Přihlásit se</a>
+          <h1 class="center"><span>ETNETERA</span> MOBILE ACADEMY 2019</h1> 
+          <span class="hero__date">Probíhá výběr studentů</span>
+          <!-- <a href="https://forms.gle/LuadJjW17VdZ5RJw5" target="_blank" class="btn btn-large registration-click">Přihlásit se</a> -->
           <ul class="hero__social">
             <li><a target="_blank" href="https://www.linkedin.com/company/44243/">
               <svg xmlns="http://www.w3.org/2000/svg" width="25px" height="24px" viewBox="0 0 24.56 23.52"><defs><style>.cls-1{fill:#aaa;}</style></defs><title>Datový zdroj 1</title><g id="Vrstva_2" data-name="Vrstva 2"><g id="Vrstva_1-2" data-name="Vrstva 1"><path id="icon_linkedin" data-name="icon linkedin" class="cls-1" d="M24.56,14.43v9.09H19.3V15c0-2.14-.76-3.59-2.67-3.59a2.87,2.87,0,0,0-2.7,1.93,3.53,3.53,0,0,0-.18,1.28v8.86H8.49s.07-14.37,0-15.86h5.27V9.91l0,.05h0V9.91A5.23,5.23,0,0,1,18.5,7.29C22,7.29,24.56,9.55,24.56,14.43ZM3,0a2.75,2.75,0,0,0-.47,5.48H3A2.75,2.75,0,0,0,3.39,0ZM.32,23.52H5.58V7.66H.32Z"/></g></g></svg>
@@ -405,9 +405,9 @@
       </div>
     </section>
 
-    <a href="https://forms.gle/LuadJjW17VdZ5RJw5" target="_blank" class="footer footer__link registration-click">
+    <!-- <a href="https://forms.gle/LuadJjW17VdZ5RJw5" target="_blank" class="footer footer__link registration-click">
         <span class="btn btn-large">Přihlásit se</span>
-    </a>
+    </a> -->
 
     </div>
     <script type="text/javascript" src="dist/js/main.min.js"></script>
