Změny na webu 2020 - Prihlasovaci tlacitka

--- a/index.html
+++ b/index.html
@@ -652,9 +652,9 @@
         </div>
     </section>
 
-    <!-- <a href="https://forms.gle/LuadJjW17VdZ5RJw5" target="_blank" class="footer footer__link registration-click">
+    <a href="https://forms.gle/dMsceUg3Gp4KpPaWA" target="_blank" class="footer footer__link registration-click">
         <span class="btn btn-large">Přihlásit se</span>
-    </a> -->
+    </a>
 
 </div>
 <script type="text/javascript" src="dist/js/main.min.js"></script>
