--- a/absolventi-2019.html
+++ b/absolventi-2019.html
@@ -258,9 +258,9 @@
       </div>
     </section>
 
-    <!--<a href="https://goo.gl/forms/FG5lZZSEnFSQ4qjK2" target="_blank" class="footer footer__link registration-click">
+    <a href="https://forms.gle/dMsceUg3Gp4KpPaWA" target="_blank" class="footer footer__link registration-click">
         <span class="btn btn-large">Přihlásit se</span>
-    </a>-->
+    </a>
 
     </div>
     <script type="text/javascript" src="dist/js/main.min.js"></script>
