Změny na webu 2020

--- a/absolventi-2018.html
+++ b/absolventi-2018.html
@@ -68,7 +68,7 @@
       <header class="header">
       <div class="container">
     
-        <a class="logo" title="Etnetera Mobile Academy 2019" href="/"><img src="dist/img/logo.svg" alt=""></a>
+        <a class="logo" title="Etnetera Mobile Academy 2018" href="/"><img src="dist/img/logo.svg" alt=""></a>
 
         <a class="back" href="/">Zpět na hlavní stránku</a>
 
@@ -77,8 +77,8 @@
 
     <section id="hero" class="hero">
         <div class="hero__content">
-          <h1 class="center"><span>ABSOLVENTI</span> MOBILE ACADEMY 2019</h1>
-          <span class="hero__date">Níže uvedení absolventi jsou držiteli platného certifikátu Etnetera Mobile Academy 2019 se zaměřením na <strong>Vývoj mobilních aplikací pro iOS v jazyce Swift.</strong></span>
+          <h1 class="center"><span>ABSOLVENTI</span> MOBILE ACADEMY 2018</h1>
+          <span class="hero__date">Níže uvedení absolventi jsou držiteli platného certifikátu Etnetera Mobile Academy 2018 se zaměřením na <strong>Vývoj mobilních aplikací pro iOS v jazyce Swift.</strong></span>
         </div>
     </section>
 
@@ -88,7 +88,7 @@
         <div class="students">
           <div class="students__item">
             <span class="students__title">Certifikát absolventa Etnetera Mobile Academy</span>
-            <span class="students__name">Hoang Anh Ngo „Tony“</span>
+            <span class="students__name">Adam Pečev</span>
             <span class="students__desc">
               Zaměření:<br>
               <strong>Vývoj mobilních aplikací pro iOS v jazyce Swift</strong>
@@ -97,7 +97,7 @@
 
           <div class="students__item">
             <span class="students__title">Certifikát absolventa Etnetera Mobile Academy</span>
-            <span class="students__name">Tomáš Tomek</span>
+            <span class="students__name">Milan Čáp</span>
             <span class="students__desc">
               Zaměření:<br>
               <strong>Vývoj mobilních aplikací pro iOS v jazyce Swift</strong>
@@ -106,7 +106,7 @@
 
           <div class="students__item">
             <span class="students__title">Certifikát absolventa Etnetera Mobile Academy</span>
-            <span class="students__name">Lukáš Holeczy</span>
+            <span class="students__name">Šimon Voráč</span>
             <span class="students__desc">
               Zaměření:<br>
               <strong>Vývoj mobilních aplikací pro iOS v jazyce Swift</strong>
@@ -115,7 +115,7 @@
 
           <div class="students__item">
             <span class="students__title">Certifikát absolventa Etnetera Mobile Academy</span>
-            <span class="students__name">Lukáš Ambrož</span>
+            <span class="students__name">Jan Kodeš</span>
             <span class="students__desc">
               Zaměření:<br>
               <strong>Vývoj mobilních aplikací pro iOS v jazyce Swift</strong>
@@ -124,7 +124,7 @@
 
           <div class="students__item">
             <span class="students__title">Certifikát absolventa Etnetera Mobile Academy</span>
-            <span class="students__name">Martin Kolomazník</span>
+            <span class="students__name">Michal Kroupa</span>
             <span class="students__desc">
               Zaměření:<br>
               <strong>Vývoj mobilních aplikací pro iOS v jazyce Swift</strong>
@@ -133,7 +133,7 @@
 
           <div class="students__item">
             <span class="students__title">Certifikát absolventa Etnetera Mobile Academy</span>
-            <span class="students__name">Ján Jendrušák „Jano“</span>
+            <span class="students__name">Marek Tomaštík</span>
             <span class="students__desc">
               Zaměření:<br>
               <strong>Vývoj mobilních aplikací pro iOS v jazyce Swift</strong>
@@ -142,7 +142,7 @@
 
           <div class="students__item">
             <span class="students__title">Certifikát absolventa Etnetera Mobile Academy</span>
-            <span class="students__name">Vojtěch Mach „Vojta“</span>
+            <span class="students__name">Lukáš Kořínek</span>
             <span class="students__desc">
               Zaměření:<br>
               <strong>Vývoj mobilních aplikací pro iOS v jazyce Swift</strong>
@@ -151,7 +151,7 @@
 
           <div class="students__item">
             <span class="students__title">Certifikát absolventa Etnetera Mobile Academy</span>
-            <span class="students__name">Alžběta Gogoláková „Betka“</span>
+            <span class="students__name">Dorota Piačeková</span>
             <span class="students__desc">
               Zaměření:<br>
               <strong>Vývoj mobilních aplikací pro iOS v jazyce Swift</strong>
@@ -160,7 +160,16 @@
 
           <div class="students__item">
             <span class="students__title">Certifikát absolventa Etnetera Mobile Academy</span>
-            <span class="students__name">Dominik Kohlman</span>
+            <span class="students__name">Markéta Adamusová Hanušová</span>
+            <span class="students__desc">
+              Zaměření:<br>
+              <strong>Vývoj mobilních aplikací pro iOS v jazyce Swift</strong>
+            </span>
+          </div>
+
+          <div class="students__item">
+            <span class="students__title">Certifikát absolventa Etnetera Mobile Academy</span>
+            <span class="students__name">Michal Čambor</span>
             <span class="students__desc">
               Zaměření:<br>
               <strong>Vývoj mobilních aplikací pro iOS v jazyce Swift</strong>
@@ -168,21 +177,14 @@
           </div>
           <div class="students__item">
             <span class="students__title">Certifikát absolventa Etnetera Mobile Academy</span>
-            <span class="students__name">Minh Trieu „Minho“</span>
+            <span class="students__name">Tuan Tu Do</span>
             <span class="students__desc">
               Zaměření:<br>
               <strong>Vývoj mobilních aplikací pro iOS v jazyce Swift</strong>
             </span>
           </div>
+        </div>
 
-      <div class="students__item">
-        <span class="students__title">Certifikát absolventa Etnetera Mobile Academy</span>
-        <span class="students__name">Matěj Dolenský</span>
-        <span class="students__desc">
-              Zaměření:<br>
-              <strong>Vývoj mobilních aplikací pro iOS v jazyce Swift</strong>
-            </span>
-      </div>
         <div class="mentors">
           <h3>Mentoři</h3>
           <ul class="mentors__list">
@@ -191,15 +193,24 @@
               Mobile Division Leader
             </li>
             <li>
-              <strong>Petr Urban</strong>
+              <strong>Jan Čislinský</strong>
               Lead iOS Developer
+            </li>
+            <li>
+              <strong>Petr Urban</strong>
+              iOS Developer & UX Architect
             </li>
             <li>
               <strong>Jiří Zoudun</strong>
               iOS Developer & Team Leader
             </li>
+            <li>
+              <strong>Jakub Nižaradze</strong>
+              iOS Developer
+            </li>
           </ul>
         </div>
+      </div>
     </section>
 
     <section id="contact" class="section contact">
@@ -230,7 +241,7 @@
     </section>
 
     <a href="https://forms.gle/dMsceUg3Gp4KpPaWA" target="_blank" class="footer footer__link registration-click">
-        <span class="btn btn-large">Mám zájem</span>
+        <span class="btn btn-large">Přihlásit se</span>
     </a>
 
     </div>
