--- a/index.html
+++ b/index.html
@@ -108,20 +108,7 @@
 		<div class="hero__content">
 			<h1 class="center"><span>ETNETERA</span> MOBILE ACADEMY 2021</h1>
 			<ul class="hero__social" style="margin-bottom: 40px">
-				<li><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="0 0 64 64" style="enable-background:new 0 0 64 64;" xml:space="preserve" width="40px">
-<path d="M64,17.7c0-0.6,0-1.3,0-1.9c0-1.4-0.1-2.8-0.4-4.2c-0.2-1.4-0.7-2.7-1.3-4C61,5.1,59,3,56.4,1.7c-1.3-0.6-2.6-1.1-4-1.3
-	C51,0.2,49.6,0,48.2,0c-0.6,0-1.3,0-1.9,0H17.8c-0.6,0-1.3,0-1.9,0c-0.3,0-0.7,0-1.1,0c-1.1,0-2.1,0.2-3.2,0.3c-1,0.2-2.1,0.5-3,0.9
-	c-0.3,0.1-0.7,0.3-1,0.4C6.7,2.2,5.8,2.8,5,3.5C4.7,3.7,4.5,3.9,4.2,4.2c-1,1-1.8,2.1-2.5,3.4c-0.6,1.3-1.1,2.6-1.3,4
-	c-0.2,1.4-0.3,2.8-0.4,4.2c0,0.6,0,1.3,0,1.9v28.5c0,0.6,0,1.3,0,1.9c0,1.4,0.1,2.8,0.4,4.2c0.2,1.4,0.7,2.7,1.3,4
-	C3,58.9,5.1,61,7.6,62.3c1.3,0.6,2.6,1.1,4,1.3c1.4,0.2,2.8,0.4,4.2,0.4c0.6,0,1.3,0,1.9,0h28.5c0.6,0,1.3,0,1.9,0
-	c1.4,0,2.8-0.1,4.2-0.4c1.4-0.2,2.7-0.7,4-1.3c2.5-1.3,4.6-3.3,5.9-5.9c0.6-1.3,1.1-2.6,1.3-4c0.2-1.4,0.4-2.8,0.4-4.2
-	c0-0.6,0-1.3,0-1.9V20C64,19.3,64,18.5,64,17.7z M54,52.2c-2.9-5.6-8.2-4.2-10.9-2.8c-0.2,0.1-0.5,0.3-0.7,0.4l-0.1,0
-	c-5.6,3-13.2,3.2-20.8-0.1c-6.2-2.7-11.4-7.2-15-12.9c1.8,1.3,3.6,2.4,5.6,3.3c8.1,3.8,16.1,3.5,21.9,0c-8.1-6.3-14.9-14.4-20.2-21
-	c-1-1.2-1.9-2.4-2.7-3.7c6.2,5.7,16.1,12.9,19.6,14.9C23.2,22.4,16.6,12.6,16.9,13c11.8,11.9,22.7,18.7,22.7,18.7
-	c0.4,0.2,0.7,0.4,1,0.6c0.2-0.6,0.4-1.2,0.6-1.8c1.9-6.9-0.2-14.8-5-21.3c11,6.6,17.5,19.1,14.8,29.7c-0.1,0.2-0.1,0.5-0.2,0.7
-	C56.2,46.3,54.7,53.5,54,52.2L54,52.2z"/>
-</svg></li>
+				<li><?xml version="1.0" ?><!DOCTYPE svg  PUBLIC '-//W3C//DTD SVG 1.1//EN'  'http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd'><svg width="40px" style="enable-background:new 0 0 512 512;" version="1.1" viewBox="0 0 512 512" width="512px" xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g id="comp_x5F_332-swift"><g><g id="_x32_3-swift_5_"><g><g><g><path d="M309.53,54.211c202.223,135.313,136.646,284.006,136.646,284.006s57.44,63.738,34.351,119.572        c0,0-23.83-39.004-63.388-39.004c-38.243,0-60.866,39.004-138.061,39.004c-171.691,0-253.077-141.076-253.077-141.076        c154.725,100.318,260.438,29.227,260.438,29.227C216.58,306.219,68.406,115.981,68.406,115.981        C197.577,224.118,253.319,252.51,253.319,252.51C219.802,225.531,126.391,93.294,126.391,93.294        C201.14,167.64,349.72,271.309,349.72,271.309C392.326,156.747,309.53,54.211,309.53,54.211L309.53,54.211z"/></g></g></g></g></g></g><g id="Layer_1"/></svg></li>
 				<li><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 64 64" style="enable-background:new 0 0 64 64;" xml:space="preserve" width="40px">
 <g>
