--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
 								<p>Dnes mnoho času věnuje také UX, díky čemuž nemůže chybět na žádném novém projektu
 									jakožto <strong>UX designer</strong>.</p>
 								<ul class="speakers__social">
-									<li><a href="https://www.linkedin.com/in/petr-urban-2abba175/" targer="_blank">
+									<li><a href="https://www.linkedin.com/in/petr-urban-2abba175/" target="_blank">
 										<svg height="20px" viewBox="0 0 24.56 23.52" width="21px"
 											 xmlns="http://www.w3.org/2000/svg">
 											<defs>
@@ -473,7 +473,7 @@
 									následně vyhrál.
 								</p>
 								<ul class="speakers__social">
-									<li><a href="https://www.instagram.com/_zoudy/" targer="_blank">
+									<li><a href="https://www.instagram.com/_zoudy/" target="_blank">
 										<svg height="21px" viewBox="0 0 23.07 23.13" width="20px"
 											 xmlns="http://www.w3.org/2000/svg">
 											<defs>
@@ -492,7 +492,7 @@
 											</g>
 										</svg>
 									</a></li>
-									<li><a href="https://www.linkedin.com/in/jirizoudun/" targer="_blank">
+									<li><a href="https://www.linkedin.com/in/jirizoudun/" target="_blank">
 										<svg height="20px" viewBox="0 0 24.56 23.52" width="21px"
 											 xmlns="http://www.w3.org/2000/svg">
 											<defs>
@@ -511,7 +511,7 @@
 											</g>
 										</svg>
 									</a></li>
-									<li><a href="https://twitter.com/JiriZoudun" targer="_blank">
+									<li><a href="https://twitter.com/JiriZoudun" target="_blank">
 										<svg height="20px" viewBox="0 0 28.1 22.61" width="22px"
 											 xmlns="http://www.w3.org/2000/svg">
 											<defs>
@@ -555,7 +555,7 @@
 									oslovila naše firemní kultura a stal se <strong>spoluzakladatelem mobilní
 										divize</strong>, kterou dnes vede.</p>
 								<ul class="speakers__social">
-									<li><a href="https://www.linkedin.com/in/milosjascur/" targer="_blank">
+									<li><a href="https://www.linkedin.com/in/milosjascur/" target="_blank">
 										<svg height="20px" viewBox="0 0 24.56 23.52" width="21px"
 											 xmlns="http://www.w3.org/2000/svg">
 											<defs>
