Changed registration forms and button texts (master)

--- a/index.html
+++ b/index.html
@@ -121,8 +121,7 @@
 				</li>
 			</ul>
 			<span class="hero__date">1. 3. - 1. 5. 2021</span>
-			<a class="btn btn-large registration-click" href="https://forms.gle/dMsceUg3Gp4KpPaWA" target="_blank">Mám
-				zájem</a>
+			<a class="btn btn-large registration-click" href="https://forms.gle/m4U5xFeNwkfSqYcm8" target="_blank">Přihlásit se</a>
 			<ul class="hero__social">
 				<li><a href="https://www.linkedin.com/company/44243/" target="_blank">
 					<svg height="24" viewBox="0 0 24.56 23.52" width="25" xmlns="http://www.w3.org/2000/svg">
@@ -180,8 +179,8 @@
 				<div class="col-lg-7">
 					<h2>O akademii</h2>
 					<p>V současné době se pečlivě připravujeme na spuštění třetího ročníku Mobile Academy, tedy
-						uceleného kurzu mobilního vývoje pořádaného firmou Etnetera a. s. Do kurzu se můžeš <strong><a
-								href="https://forms.gle/dMsceUg3Gp4KpPaWA" target="_blank">nezávazně
+						uceleného kurzu mobilního vývoje pořádaného firmou Etnetera a. s. Do kurzu se již nyní můžeš <strong><a
+								href="https://forms.gle/m4U5xFeNwkfSqYcm8" target="_blank">
 							přihlásit</a></strong> a vybrat si mezi dvěma fakultami. V případě <strong>iOS
 							fakulty</strong> se těš na programovací jazyk Swift a pokud máš radši zeleného robota, budeš
 						se cítit dobře na <strong>Android fakultě</strong> s Kotlinem.</p>
@@ -622,8 +621,8 @@
 		</div>
 	</section>
 
-	<a class="footer footer__link registration-click" href="https://forms.gle/dMsceUg3Gp4KpPaWA" target="_blank">
-		<span class="btn btn-large">Mám zájem</span>
+	<a class="footer footer__link registration-click" href="https://forms.gle/m4U5xFeNwkfSqYcm8" target="_blank">
+		<span class="btn btn-large">Přihlásit se</span>
 	</a>
 
 </div>
