Added harmonogram (master)

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 					<li><a href="#about-us">O akademii</a></li>
 					<li><a href="#gain">Co získáš</a></li>
 					<li><a href="#speakers">Mentoři</a></li>
+					<li><a href="#harmonogram">Harmonogram</a></li>
 					<li><a href="#contact">Kontakt</a></li>
 				</ul>
 				<!-- <a href="https://forms.gle/LuadJjW17VdZ5RJw5" target="_blank" class="btn btn--small registration-click">Přihlásit se</a> -->
@@ -592,6 +593,46 @@
 			</div>
 		</div>
 	</section>
+
+    <section id="harmonogram" class="section harmonogram">
+        <div class="container">
+            <h2 class="center">Harmonogram</h2>
+            <div class="text-center">
+                <a href="https://forms.gle/m4U5xFeNwkfSqYcm8" target="_blank" class="btn btn-large registration-click">Přihlásit
+                    se</a>
+            </div>
+            <div class="row">
+                <div class="col-xl-13 col-xl-offset-1">
+                    <ul class="harmonogram__list">
+                        <li>
+                            <span class="harmonogram__title">REGISTRACE</span>
+                            <span class="harmonogram__number"><strong>PROSINEC</strong> 2020</span>
+                        </li>
+                        <li>
+                            <span class="harmonogram__title">UKONČENÍ REGISTRACE</span>
+                            <span class="harmonogram__number"><strong>31. 1.</strong> 2021</span>
+                        </li>
+                        <li>
+                            <span class="harmonogram__title">VÝBĚR STUDENTŮ</span>
+                            <span class="harmonogram__number"><strong>ÚNOR</strong> 2021</span>
+                        </li>
+                        <li>
+                            <span class="harmonogram__title">START AKADEMIE</span>
+                            <span class="harmonogram__number"><strong>13. 3.</strong> 2021</span>
+                        </li>
+                        <li>
+                            <span class="harmonogram__title">PRŮBĚH AKADEMIE</span>
+                            <span class="harmonogram__number"><strong>BŘEZEN - DUBEN</strong> 2021</span>
+                        </li>
+                        <li>
+                            <span class="harmonogram__title">PROMOCE</span>
+                            <span class="harmonogram__number"><strong>KVĚTEN</strong> 2021</span>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
 
 	<section class="section contact" id="contact">
 		<div class="container">
