Uprava responsive - hero komponenty

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<meta content="#ff5858" name="theme-color"/>
 	<title>Etnetera Mobile Academy 2021</title>
 
-	<link href="dist/css/style.css" rel="stylesheet">
+	<link href="dist/css/style.min.css" rel="stylesheet">
 
 	<!-- Facebook Pixel Code -->
 	<script>
